--- a/wubi86.dict.yaml
+++ b/wubi86.dict.yaml
@@ -3495,8 +3495,8 @@ encoder:
 员	kmu	386000000
 員	kmu	94600000
 呐	kmw	22900000
-呗	kmy	6520000
-唄	kmy	12400000
+唄	kmy	6520000
+呗	kmy	12400000
 叼	kng	6620000
 叫	knh	445000000
 噼	knk	825000
@@ -74534,8 +74534,8 @@ AA制	aarm	985000
 黺	oguv	503000
 𦦹	oguv	0
 㱉	oguw	4300
-業	oguw	93900000
-精准	oguw	5300000
+精准	oguw	93900000
+業	oguw	5300000
 菐	oguy	125000
 黼	oguy	378000
 𧮙	oguy	0
@@ -78895,8 +78895,8 @@ AA制	aarm	985000
 襊	pujc	23900
 𧜞	pujc	0
 䙨	puje	3680
-实时	pujf	25600000
-裡	pujf	58500000
+裡	pujf	25600000
+实时	pujf	58500000
 襅	pujf	30400
 𡩘	pujf	0
 衵	pujg	95100
@@ -116459,9 +116459,9 @@ U盘	uute	31900000
 𦧶	vfjd	0
 𡡲	vfje	0
 媾	vfjf	839000
-書	vfjf	246000000
+那里	vfjf	246000000
 那时	vfjf	28500000
-那里	vfjf	76200000
+書	vfjf	76200000
 晝	vfjg	1850000
 那是	vfjg	63100000
 𤲿	vfjg	0
@@ -123132,8 +123132,8 @@ U盘	uute	31900000
 八一	wtgg	5780000
 𠇷	wtgg	0
 余下	wtgh	4450000
-傻逼	wtgk	658000
-叙事	wtgk	3100000
+傻逼	wtgk	3100000
+叙事	wtgk	658000
 作画	wtgl	7590000
 働	wtgl	3120000
 作恶	wtgo	1200000
@@ -125741,11 +125741,11 @@ U盘	uute	31900000
 䬻	wyvt	3870
 䬾	wyvt	3990
 䭛	wyvt	3810
-集群	wyvt	11000000
+集群	wyvt	13500000
 飶	wyvt	46900
 餓	wyvt	6420000
 餕	wyvt	34600
-餘	wyvt	13500000
+餘	wyvt	11000000
 饊	wyvt	32400
 饑	wyvt	1250000
 饖	wyvt	20500
@@ -135683,10 +135683,10 @@ U盘	uute	31900000
 𧘭	ywye	0
 㢑	ywyf	4160
 䜃	ywyf	4580
-誰	ywyg	210000000
-认证	ywyg	116000000
-论证	ywyg	11200000
 谁	ywyg	361000000
+认证	ywyg	210000000
+论证	ywyg	116000000
+誰	ywyg	11200000
 𣁑	ywyg	0
 𧪄	ywyg	0
 𧫧	ywyg	0
