--- a/wubi86.custom.yaml
+++ b/wubi86.custom.yaml
@@ -11,6 +11,9 @@ patch:
     - name: simplification
       reset: 0
       states: ["汉字", "漢字"]
+    - name: extended_charset  #生僻字开关
+      reset: 0
+      states: ["通用", "增廣"]
     - name: show_emoji
       reset: 1
       states: [ "🈚️️\uFE0E", "🈶️️\uFE0F" ]
@@ -29,19 +32,24 @@ patch:
     tags: abc
 
 
-  "speller/max_code_length": 4 #最长4码
-  "speller/auto_select": true #顶字上屏
-  "speller/auto_select_unique_candidate": true #无重码自动上屏
+  speller:
+    max_code_length: 4 #最长4码
+    auto_select: true #顶字上屏
+    auto_select_unique_candidate: true #无重码自动上屏
 
-  "translator/dictionary": wubi86 #加载五笔词库
-  "translator/enable_user_dict": false
+  translator:
+    dictionary: wubi86 #加载五笔词库
+    enable_user_dict: true
+    enable_encoder: false
+    enable_completion: true
+    enable_sentence: false
   "reverse_lookup/comment_format/@1": xform/^(\w+).*/$1/
 
 #  符号快速输入和部分符号的快速上屏
   punctuator:
     import_preset: symbols
     symbols:
-      "/fs": [½, ‰, ¼, ⅓, ⅔, ¾, ⅒ ]
+      "/fs": [½, ¼, ⅓, ⅔, ¾, ⅒ , ‱, ‰ ]
       "/bq": [😂️, 😅️, ☺️, 😱️, 😭️, 😇️, 🙃️, 🤔️, 💊️, 💯️, 👍️, 🙈️, 💩️, 😈️ ]
       "/dn": [⌘, ⌥, ⇧, ⌃, ⎋, ⇪, , ⌫, ⌦, ↩︎, ⏎, ↑, ↓, ←, →, ↖, ↘, ⇟, ⇞]
       "/fh": [ ©, ®, ℗, ℠, ™, ℡, ⓘ, ♂, ♀, ☉, ☊, ☋, ☌, ☍, ☐, ☑︎, ☒, ☜, ☝, ☞, ☟, ✎, ✄, ♲, ♻, ⚐, ⚑, ⚠]
