修复extended_charset设置无效

--- a/wubi86.custom.yaml
+++ b/wubi86.custom.yaml
@@ -13,10 +13,10 @@ patch:
       states: ["汉字", "漢字"]
     - name: extended_charset  #生僻字开关
       reset: 0
-      states: ["通用", "增廣"]
+      states: ["常用", "增廣"]
     - name: show_emoji
       reset: 1
-      states: [ "🈚️️\uFE0E", "🈶️️\uFE0F" ]
+      states: [ "🈚️️", "🈶️️" ]
 
   simplifier:
       opencc_config: s2t.json  # 简入繁出
@@ -31,18 +31,17 @@ patch:
     option_name: show_emoji
     tags: abc
 
-
   speller:
-    max_code_length: 4 #最长4码
-    auto_select: true #顶字上屏
-    auto_select_unique_candidate: true #无重码自动上屏
+    max_code_length: 4                  #最长4码
+    auto_select: true                   #顶字上屏
+    auto_select_unique_candidate: true  #无重码自动上屏
 
   translator:
     dictionary: wubi86 #加载五笔词库
     enable_user_dict: true
     enable_encoder: false
-    enable_completion: true
     enable_sentence: false
+    enable_charset_filter: true
   "reverse_lookup/comment_format/@1": xform/^(\w+).*/$1/
 
 #  符号快速输入和部分符号的快速上屏
